refactor log consumer and main app